--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1>Welcome to the DevOps Course</h1>
+        <h1>Welcome to the ADT_001_UPDATE</h1>
         <p th:text=" 'Course Name:' + ${course}" />
       </div>
 
