--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,6 +1,11 @@
 body {
 	padding-top: 50px;
 }
+.container {
+	max-width: 100%;
+	padding-left: 10%;
+	padding-right: 10%;
+}
 .starter-template {
 	padding: 40px 10px;
 	text-align: center;
