--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,8 +50,57 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1>Welcome to the ADT_001_UPDATE</h1>
+        <h1>Welcome to the DevOps</h1>
         <p th:text=" 'Course Name:' + ${course}" />
+      </div>
+      <div>
+      	<div class="row">
+        	<div class="col-md-2">
+        		<form role="form">
+				  <div class="form-group">
+				    <label for="exampleInputEmail1">Franchise</label>
+				    <input class="form-control" id="exampleInputEmail1" placeholder="Franchise"/>
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleInputPassword1">Operator</label>
+				    <input class="form-control" id="exampleInputPassword1" placeholder="Operator"/>
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleInputPassword2">Segment Code</label>
+				    <input class="form-control" id="exampleInputPassword2" placeholder="Segment Code"/>
+				  </div>
+				  <button class="btn btn-default">Submit</button>
+				</form>
+        	</div>
+        	<div class="col-md-10">
+        		<table class="table table-hover">
+				  <tr>
+				  	<th>Id</th>
+				  	<th>Franchise</th>
+				  	<th>Operator</th>
+				  	<th>Market Segment Code</th>
+				  	<th>Amount</th>
+				  	<th>Status</th>
+				  	<th>Created</th>
+				  	<th>Created By</th>
+				  	<th>Modified</th>
+				  	<th>Modified By</th>
+				  </tr>
+				  <tr th:each="item : ${items}">
+				  	<td th:text="${item.id}"></td>
+				  	<td th:text="${item.franchise}"></td>
+				  	<td th:text="${item.operator}"></td>
+				  	<td th:text="${item.marketcode}"></td>
+				  	<td th:text="${item.amount}"></td>
+				  	<td th:text="${item.status}"></td>
+				  	<td th:text="${item.created}"></td>
+				  	<td th:text="${item.createdBy}"></td>
+				  	<td th:text="${item.modified}"></td>
+				  	<td th:text="${item.modifiedBy}"></td>
+				  </tr>
+				</table>
+        	</div>
+        </div>
       </div>
 
     </main><!-- /.container -->
