--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <title>DevOps Course</title>
+    <title>DevOps Search</title>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"/>
 
@@ -50,30 +50,12 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1 id="welcome">Welcome to the DevOps</h1>
-        <p th:text=" 'Course Name:' + ${course}" />
+        <h1 name="search">Search</h1>
       </div>
       <div>
       	<div class="row">
-        	<div class="col-md-2">
-       		<form name="searchForm" role="form" action="#" th:action="@{/search}" th:object="${search}" method="post">
- 				  <div class="form-group">
- 				    <label for="exampleInputEmail1">Franchise</label>
- 				    <input name="franchise" class="form-control" id="exampleInputEmail1" placeholder="Franchise" th:field="*{franchise}"/>
- 				  </div>
- 				  <div class="form-group">
- 				    <label for="exampleInputPassword1">Operator</label>
- 				    <input name="operator" class="form-control" id="exampleInputPassword1" placeholder="Operator" th:field="*{operator}"/>
- 				  </div>
- 				  <div class="form-group">
- 				    <label for="exampleInputPassword2">Segment Code</label>
- 				    <input name="marketCode" class="form-control" id="exampleInputPassword2" placeholder="Segment Code" th:field="*{marketCode}"/>
- 				  </div>
-				  <button name="submit" class="btn btn-default" type="submit">Submit</button>
- 				</form>
-         	</div>
          	<div class="col-md-10">
-         		<table class="table table-hover">
+         		<table name="searchTable" class="table table-hover">
  				  <tr>
  				  	<th>Id</th>
  				  	<th>Franchise</th>
