--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,55 @@
         <h1 id="welcome">Welcome to the DevOps</h1>
         <p th:text=" 'Course Name:' + ${course}" />
       </div>
-      
+      <div>
+      	<div class="row">
+        	<div class="col-md-2">
+       		<form name="searchForm" role="form" action="#" th:action="@{/search}" th:object="${search}" method="post">
+ 				  <div class="form-group">
+ 				    <label for="exampleInputEmail1">Franchise</label>
+ 				    <input name="franchise" class="form-control" id="exampleInputEmail1" placeholder="Franchise" th:field="*{franchise}"/>
+ 				  </div>
+ 				  <div class="form-group">
+ 				    <label for="exampleInputPassword1">Operator</label>
+ 				    <input name="operator" class="form-control" id="exampleInputPassword1" placeholder="Operator" th:field="*{operator}"/>
+ 				  </div>
+ 				  <div class="form-group">
+ 				    <label for="exampleInputPassword2">Segment Code</label>
+ 				    <input name="marketCode" class="form-control" id="exampleInputPassword2" placeholder="Segment Code" th:field="*{marketCode}"/>
+ 				  </div>
+				  <button name="submit" class="btn btn-default" type="submit">Submit</button>
+ 				</form>
+         	</div>
+         	<div class="col-md-10">
+         		<table class="table table-hover">
+ 				  <tr>
+ 				  	<th>Id</th>
+ 				  	<th>Franchise</th>
+ 				  	<th>Operator</th>
+ 				  	<th>Market Segment Code</th>
+ 				  	<th>Amount</th>
+ 				  	<th>Status</th>
+ 				  	<th>Created</th>
+ 				  	<th>Created By</th>
+ 				  	<th>Modified</th>
+ 				  	<th>Modified By</th>
+ 				  </tr>
+ 				  <tr th:each="item : ${items}">
+ 				  	<td th:text="${item.id}"></td>
+ 				  	<td th:text="${item.franchise}"></td>
+ 				  	<td th:text="${item.operator}"></td>
+ 				  	<td th:text="${item.marketcode}"></td>
+ 				  	<td th:text="${item.amount}"></td>
+ 				  	<td th:text="${item.status}"></td>
+ 				  	<td th:text="${item.created}"></td>
+ 				  	<td th:text="${item.createdBy}"></td>
+ 				  	<td th:text="${item.modified}"></td>
+ 				  	<td th:text="${item.modifiedBy}"></td>
+ 				  </tr>
+ 				</table>
+         	</div>
+         </div>
+       </div>
 
     </main><!-- /.container -->
 
